// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotePageMain component renders a .NotePageMain by default 1`] = `
<section
  className="NotePageMain"
>
  <Note
    delete={[Function]}
    name=""
  />
  <div
    className="NotePageMain__content"
  >
    <p
      key="0"
    />
  </div>
</section>
`;

exports[`NotePageMain component renders a Note with note prop 1`] = `
<Note
  delete={[Function]}
  name=""
/>
`;

exports[`NotePageMain component splits the content by \\n or \\n\\r, with a p foreach 1`] = `null`;

exports[`NotePageMain component splits the content by \\n or \\n\\r, with a p foreach 2`] = `null`;
